--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class = "divider"></div>
                 <div class = "info2">
-                    <p class = "intro_hobbies" >Software Engineer | Learning Web Developer | Gamer </p>
+                    <p class = "intro_hobbies" >Software Engineer | Aspiring Web Developer | Gamer </p>
                     <p class = "intro_where" > Computer Science @ Boston University </p>
                 </div>
 
