changed link for css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="animsition.min.css">
         <!-- Personal CSS -->
-        <link href="./index-copy.css" rel = "stylesheet" >
+        <link href="./index.css" rel = "stylesheet" >
 
         <div class="animsition">
             <div class="row">
@@ -31,9 +31,9 @@
 
 
             <div class="row table">
-                <div class="col-md-4 right">Software Engineer</div>
-                <div class="col-md-4 mid">Aspiring Web Developer</div>
-                <div class="col-md-4 left">Gamer</div>
+                <div class="col-md-4 right"></div>
+                <div class="col-md-4 mid">Software Engineer | Aspiring Web Developer | Gamer</div>
+                <div class="col-md-4 left"></div>
             </div>
         </div>
 
