1st page responsive site

--- a/index.html
+++ b/index.html
@@ -31,11 +31,21 @@
 
 
             <div class="row table">
-                <div class="col-md-4 right"></div>
-                <div class="col-md-4 mid">Software Engineer | Aspiring Web Developer | Gamer</div>
-                <div class="col-md-4 left"></div>
+                <div class="col-md-4 left">Software Engineer </div>
+                <div class="col-md-4 mid "> Aspiring Web Developer  </div>
+                <div class="col-md-4 right">Gamer</div>
             </div>
+
+
+            <div class="row table">
+                <div class="col-md-10 col-md-offset-1 where">
+                    <p class="">Computer Science @ Boston University</p>
+                </div>
+            </div>
+
+<!--             <div class="copyright"><p>&#169 Raphael Baysa 2015</p></div> -->
         </div>
+
 
 
     <script type="text/javascript" src="./jquery.min.js"></script>
