changed settings and updated test environment

--- a/test.html
+++ b/test.html
@@ -6,10 +6,15 @@
 </head>
 
 <body>
+        <!-- Bootstrap core CSS -->
+        <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="animsition.min.css">
+        <!-- Personal CSS -->
+        <link href="./test.css" rel = "stylesheet" >
 
-
-  <canvas id="myChart" width="2em" height="1em"></canvas>
-
+	<div id='chart'>
+	  <canvas id="myChart" width="10" height="10"></canvas>
+	</div>
 
 
   <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.1/angular.min.js"></script> -->
