--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="animsition-link"
                     data-animsition-in="zoom-in-large"
                     data-animsition-in-duration="100"
-                    href="./home.html"><img src="./logo.jpg" class="pic">
+                    href="./construction.html"><img src="./logo.jpg" class="pic">
             </a>
 
 
