--- a/test.html
+++ b/test.html
@@ -2,26 +2,23 @@
 <html>
 
 <head>
-
-</head>
-
-<body>
         <!-- Bootstrap core CSS -->
         <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="animsition.min.css">
         <!-- Personal CSS -->
         <link href="./test.css" rel = "stylesheet" >
+        
+</head>
 
-	<div id='chart'>
-	  <canvas id="myChart" width="100" height="100"></canvas>
-	</div>
+<body>
+
 
 
   <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.1/angular.min.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
   <script src="./test.js"></script>
-  <script src="./Chart.js/Chart.js"></script>
 </body>
 
 </html>
